--- a/camel-quarkus-netty4-http-producer/src/main/resources/application.properties
+++ b/camel-quarkus-netty4-http-producer/src/main/resources/application.properties
@@ -28,7 +28,7 @@ quarkus.log.category."org.apache.camel.component.netty4.http.NettyHttpProducer".
 quarkus.camel.disable-xml=true
 quarkus.camel.disable-jaxb=true        
 quarkus.camel.dump-routes=true
-quarkus.camel.defer-init-phase=false
+quarkus.camel.defer-init-phase=true
 
 #
 # Quarkus :: Camel :: Servlet
